Fix calendar buttons not scaling down on small wide screen sizes

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ input {
 }
 
 .section-event-display {
-	width: auto;
+	width: calc(min(100cqw, 100svh, 38em));
 	container-type: inline-size;
 }
 .event-display {
